--- a/app/src/main/res/layout/popup_movie_detail.xml
+++ b/app/src/main/res/layout/popup_movie_detail.xml
@@ -91,21 +91,30 @@
             app:layout_constraintStart_toStartOf="@+id/tv_popularity"
             app:layout_constraintTop_toBottomOf="@+id/tv_popularity" />
 
-        <TextView
-            android:id="@+id/tv_desc"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
 
-            android:layout_marginStart="20dp"
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:text="asfaf as  jaksf jsa "
-            android:textAlignment="center"
-            android:textSize="12dp"
+            android:background="#FAFAFA"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_date" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_date">
+
+            <TextView
+                android:id="@+id/tv_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                android:text="asfaf as  jaksf jsa "
+                android:textAlignment="center"
+                android:textSize="14dp" />
+        </androidx.core.widget.NestedScrollView>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
