--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#3A413F</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#260D53</color>
 
 
     <color name="white_alpha">#33FFFFFF</color>
